[package]
name = "savoir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
async-trait = { workspace = true }
weaviate-community = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
google-drive3 = { workspace = true }
tokio-stream = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
openai-api-rs = { workspace = true }
slack-morphism = { workspace = true }
axum = { workspace = true }
